--- a/index.html
+++ b/index.html
@@ -96,18 +96,18 @@
 
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
-								<div class="inner">
+								<div class="inner" >
 									<h2 class="major">Aziende/Imprese & StartUp</h2>
 									<p>Per maggiori informazioni sulle nostre aziende/imprese e start-up, visitare il sito web abbinato o contattare il nostro team di esperti. Siamo sempre disponibili a rispondere alle vostre domande e a fornirvi maggiori dettagli sui nostri servizi e su come possiamo aiutare la vostra attività a crescere e prosperare.</p>
 									<section class="features">
 										<article>
-											<a href="https://piu-mutui-casa-bologna-prestiti-surroga.business.site/" class="image"><img src="images/pic.04.jpg" alt="" /></a>
+											<a href="https://piu-mutui-casa-bologna-prestiti-surroga.business.site/" class="image" id="cc"><img src="images/pic.04.jpg" alt="" /></a>
 											<h3 class="major">Piu Mutui Casa-Bologna S.R.L</h3>
 											<p>Offriamo assistenza e consulenza durante la trattativa precontrattuale e contrattuale siano alla stipula formale dell’atto di compravendita.</p>
 											<a href="https://piu-mutui-casa-bologna-prestiti-surroga.business.site/" class="special" target="_blank"> More Info</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image" id="cc"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">GDL S.R.L consulenza NPL</h3>
 											<p>1. Consulenza prioritaria dedicata<br>
 											2. Aggiornamenti sui finanziamenti accessibili<br>
@@ -118,25 +118,25 @@
 											<a href="#" class="special" target="_blank">More Info</a>
 										</article>
 										<article>
-											<a href="https://demo2.wpopal.com/maisonco/home-8/" class="image"><img src="images/pic.06.jpg" alt="" /></a>
+											<a href="https://demo2.wpopal.com/maisonco/home-8/" class="image" id="cc"><img src="images/pic.06.jpg" alt="" /></a>
 											<h3 class="major">Maison.Co S.R.L</h3>
 											<p>ULTIMATE LUXURY LIVING AT SKY, Immobili di prestigio - Casali - Appartamenti - Attici - Loft - Castelli - Immobili di prestigio in vendita - Immobili di prestigio in affitto.</p>
 											<a href="https://demo2.wpopal.com/maisonco/home-8/" class="special" target="_blank">More Info</a>
 										</article>
 										<article>
-											<a href="https://photodaf.com/" class="image"><img src="images/07.jpg" alt="" /></a>
+											<a href="https://photodaf.com/" class="image" id="cc"><img src="images/07.jpg" alt="" /></a>
 											<h3 class="major">PhotoDaf (Start-Up)</h3>
 											<p>Aiutiamo le persone a scegliere la casa dei sogni, emozionandole e facendo immaginare come sarà la loro nuova vita. Photodaf è un team di 15 professionisti dai talenti diversi e complementari, uniti da valori comuni.</p>
 											<a href="https://photodaf.com/" class="special" target="_blank">More Info</a>
 										</article>										
 										<article>
-											<a href="https://www.affittibreviplus.it/servizi/#" class="image"><img src="images/pic.07.jpg" alt="" /></a>
+											<a href="https://www.affittibreviplus.it/servizi/#" class="image" id="cc"><img src="images/pic.07.jpg" alt="" /></a>
 											<h3 class="major">Affitti Brevi Plus S.N.C</h3>
 											<p>Massima Visibilità<br>Gestione Prenotazioni<br>Accoglienza Ospiti<br>Pulizia e Biancheria<br>Gestione dell’immobile<br>Copertura assicurativa</p>
 											<a href="https://www.affittibreviplus.it/servizi/#" class="special" target="_blank">More Info</a>
 										</article>										
 										<article>
-											<a href="https://tabubeachclub.com/" class="image"><img src="images/pic.08.jpg" alt="" /></a>
+											<a href="https://tabubeachclub.com/" class="image" id="cc"><img src="images/pic.08.jpg" alt="" /></a>
 											<h3 class="major">Tabù Beach Club (Start-Up)</h3>
 											<p>Il Progetto Innovativo - Green Bathause 4.0 Primo stabilimento balneare:<br>-TOTAL GREEN ovvero in cui la Carbon Foot Print è pari a 0 o addirittura attiva, la Water Foot Print è pari a 0 o quasi.<br>-DIGITAL 4.0 ovvero totalmente digitalizzato con area dotata di connettività ad elevata banda e velocità, aree con servizi digitali, attrezzato per smart working, con personale, processi, attrezzatura, clienti interconnessi..</p>
 											<a href="https://tabubeachclub.com/" class="special" target="_blank">More Info</a>
