--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
 											<a href="#" class="special" target="_blank">Maggiori Informazioni</a>
 										</article>
 										<article>
-											<a href="https://affittibreviplus.staging-v430.cloud/?st_token=EGFKBCHBWCE2R131R31HRUGFVBIY3FE1" target="_blank" class="image" id="cc"><img src="images/pic.06.jpg" alt="" /></a>
+											<a href=https://affittibreviplus.it/" target="_blank" class="image" id="cc"><img src="images/pic.06.jpg" alt="" /></a>
 											<h3 class="major">Affitti Brevi Plus S.R.L</h3>
                       <p>Siamo un team specializzato nella gestione di appartamenti e casa vacanza.
                        Individuiamo i punti di forza del tuo appartamento e ne esaltiamo ogni aspetto per massimizzare il tuo guadagno.<br>Alcuni Servizzi:<spam> Studio dell Immobile; Foto Professionali; Massima Visibilità; Accoglienza; Pagamenti Garantiti; Accoglienza; Pulizie; Copertura Assicurativa.</spam></p>
-											<a href="https://affittibreviplus.staging-v430.cloud/?st_token=EGFKBCHBWCE2R131R31HRUGFVBIY3FE1" class="special" target="_blank">Maggiori Informazioni</a>
+											<a href="https://affittibreviplus.it/" class="special" target="_blank">Maggiori Informazioni</a>
 										</article>
 										<article>
 											<a href="https://photodaf.com/" target="_blank" class="image" id="cc"><img src="images/07.jpg" alt="" /></a>
