--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 							<div class="logo"><div class="logo"><span class="icon fa-gem"></span></div>
                             </div>
 							<h2>Giuliano Piroddi</h2>
-							<p>Consulente finanziario specializzato in Conusenza Creditizia: <br>-Conusenza immobliare <br>-Conusenza tributaria <br>-Conusenza N.P.L.<br>
-							-Agevolazioni servizzi PNR.<br>-Sostenibilità.</p>
+							<p>Consulente finanziario specializzato in:-Consulenza creditizia <br>-Conusenza immobliare <br>-Conusenza tributaria <br>-Conusenza N.P.L.<br>
+							-Consulenza finanza agevolata e tradizionale.<br>-Consulenza P.N.R. e Sostenibilità.</p>
 							  <div class="hero-cta">
-							 <a href="#four" class="cta-button">Vedi Collaborazioni</a>
+							 <a href="#four" class="cta-button">Vedi Collaborazioni Società</a>
 						    </div>
 						  </div>
 
@@ -108,13 +108,13 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner" >
-									<h2 class="major">Collaborazioni Aziende/Imprese & StartUp</h2>
+									<h2 class="major">Partecipazione Aziende/Imprese & StartUp</h2>
 									<p>Come SEO e socio delle seguenti aziende e start-up, invitiamo a visitare il sito web associato o a contattare il nostro team di esperti. Siamo sempre disponibili per rispondere alle vostre domande e fornirvi ulteriori informazioni sui nostri servizi e su come possiamo aiutare la vostra attività a raggiungere successo e crescita.</p>
 									<section class="features">
 										<article>
 											<a href="https://piu-mutui-casa-bologna-prestiti-surroga.business.site/" target="_blank" class="image" id="cc"><img src="images/pic.04.jpg" alt="" /></a>
-											<h3 class="major">Piu Mutui Casa-Bologna S.R.L</h3>
-											<p>Offriamo assistenza e consulenza prima durante e dopo la trattativa precontrattuale e contrattuale siano alla stipula formale dell’atto di compravendita di un immobile.</p>
+											<h3 class="major">Piu Mutui Casa-Bologna S.P.A</h3>
+											<p>Offriamo assistenza economica e consulenza creditizia prima durante e dopo la trattativa precontrattuale e contrattuale siano alla stipula formale dell’atto di compravendita di un immobile.</p>
 											<a href="https://piu-mutui-casa-bologna-prestiti-surroga.business.site/" class="special" target="_blank">Maggiori Informazioni</a>
 										</article>
 										<article>
@@ -138,13 +138,13 @@
 										</article>
 										<article>
 											<a href="https://abifin.it/" target="_blank" class="image" id="cc"><img src="images/pic.07.jpg" alt="" /></a>
-											<h3 class="major">Abifin S.R.L</h3>
+											<h3 class="major">Abifin finanza 4.0 S.R.L</h3>
 											<p>L'esperienza che stai cercando, la competenza di cui hai bisogno.<br>
-                        <spam> 1. Consulenza prioritaria dedicata<br>
+                         1. Consulenza prioritaria dedicata<br>
                          2. Aggiornamenti sui finanziamenti accessibili<br>
                          3. Programmazione di investimenti futuri<br>
                          4. Consulenza nella preparazione dei singoli progetti<br>
-							           5. Compilazione della domanda di finanziamento<br>
+			 5. Compilazione della domanda di finanziamento<br>
                          6. Rendicontazione (su richiesta).</spam></p>
 											<a href="https://abifin.it/" class="special" target="_blank">Maggiori Informazioni</a>
 										</article>
@@ -192,13 +192,13 @@
 								<a href="tel:+393450021709">
 								<li class="icon solid fa-phone">+39 (345) 002 1709</li>
 								</a>
-								<li class="icon solid fa-envelope"><a href="#">consulenze.G.P@gmail.com</a></li>
+								<li class="icon solid fa-envelope"><a href="#">consulenza.G.P@gmail.com</a></li>
 								<li class="icon brands fa-whatsapp"><a href="https://wa.me/393450021709?text=Ciao">whatsapp.com/GiulianoPiroddi.</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/GiulianoFanPage</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/Consulenze/G.P</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design by: <a href="https://github.com/LuizRio" target="_blank">LuizRio.github</a></li>
+								<li>&copy; Untitled Inc. Tutti diritti riservati.</li><li>Design by: <a href="https://github.com/LuizRio" target="_blank">LuizRio.github</a></li>
 							</ul>
 						</div>
 					</section>
